# kite

./: .coveragerc  .gitignore  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/api/: v1.rst
etc/: kite.conf.sample
kite/: __init__.py
kite/api/: app.py  hooks.py  root.py
kite/api/v1/controllers/: __init__.py  controller.py  group.py  key.py  ticket.py
kite/api/v1/models/: __init__.py  base.py  group.py  key.py  ticket.py
kite/cli/: api.py  manage.py
kite/common/: _i18n.py  crypto.py  exception.py  service.py  storage.py  utils.py
kite/db/: api.py  connection.py  migration.py
kite/db/kvs/: api.py
kite/db/sqlalchemy/: alembic.ini  api.py  migration.py  models.py
kite/db/sqlalchemy/alembic/: env.py
kite/openstack/common/: _i18n.py  excutils.py  fileutils.py  gettextutils.py  importutils.py  jsonutils.py  lockutils.py  log.py  test.py
kite/openstack/common/config/: generator.py
kite/openstack/common/crypto/: utils.py
kite/openstack/common/db/: api.py  exception.py  options.py
kite/openstack/common/fixture/: lockutils.py  mockpatch.py  (+1 more)
kite/tests/: __init__.py  base.py  paths.py  test_kite.py
kite/tests/api/: base.py  test.py  test_cors.py
kite/tests/db/: base.py  test_groups.py  test_host_key.py
kite/tests/fixture/: __init__.py  kvsdb.py  sqlitedb.py
kite/tests/unit/: base.py  test_crypto.py  test_storage.py
tools/config/: check_uptodate.sh  generate_sample.sh
(+14 files in other folders)
